--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <div>Google Chrome</div>
     </div> -->
     <div class="taskbar">
-        <img src="img/icons.PNG" alt="">
-        <img class="right" src="img/taskbarright.PNG" alt="">
+        <img src="icons.PNG" alt="">
+        <img class="right" src="taskbarright.PNG" alt="">
     </div>
     <div class="startmenu">
-        <img src="img/startmenu.PNG" alt="">
+        <img src="startmenu.PNG" alt="">
     </div>
     <video autoplay muted id="vid">
-        <source src="img/video.webm" type="video/webm">
+        <source src="video.webm" type="video/webm">
     </video>
 </body>
 <script src="script.js"></script>
